reflectapi-demo/tests/errors/invalid_reflect_type_generic.rs
#[derive(reflectapi::Input, reflectapi::Output)]
struct MyStruct<T> {
    field: u8,
}

fn main() {}
