reflectapi-demo/tests/errors/invalid_reflect_type_generic.stderr
error[E0392]: parameter `T` is never used
 --> tests/errors/invalid_reflect_type_generic.rs:2:17
  |
2 | struct MyStruct<T> {
  |                 ^ unused parameter
  |
  = help: consider removing `T`, referring to it in a field, or using a marker such as `PhantomData`
  = help: if you intended `T` to be a const parameter, use `const T: usize` instead

error[E0277]: the trait bound `T: Input` is not satisfied
 --> tests/errors/invalid_reflect_type_generic.rs:2:17
  |
2 | struct MyStruct<T> {
  |                 ^ the trait `Input` is not implemented for `T`
  |
help: consider restricting type parameter `T`
  |
2 | struct MyStruct<T: reflectapi::Input> {
  |                  +++++++++++++++++++

error[E0277]: the trait bound `T: reflectapi::Output` is not satisfied
 --> tests/errors/invalid_reflect_type_generic.rs:2:17
  |
2 | struct MyStruct<T> {
  |                 ^ the trait `reflectapi::Output` is not implemented for `T`
  |
help: consider restricting type parameter `T`
  |
2 | struct MyStruct<T: reflectapi::Output> {
  |                  ++++++++++++++++++++
